--- a/Lesson_8/Test/index.html
+++ b/Lesson_8/Test/index.html
@@ -45,7 +45,7 @@
             <div class="image-big">
               <img
                 src="./images/z4433075523134_556258d101e7de9f22af9b765d294da5.jpg"
-                alt=""
+                alt="ao bóng đá"
               />
             </div>
           </div>
