--- a/Lesson_8/Test/index.html
+++ b/Lesson_8/Test/index.html
@@ -210,7 +210,7 @@
             style="position: relative; margin-top: 40px"
           >
             <div class="image-left">
-              <img src="./images/chair.jpg" alt="" />
+              <img src="./images/chair.jpg" alt="ngoi ghe" />
             </div>
             <div class="content-right">
               <h1>TỰ TIN BỨT PHÁ PHONG CÁCH RIÊNG</h1>
