--- a/Lesson_11/Bai_7/index.html
+++ b/Lesson_11/Bai_7/index.html
@@ -8,36 +8,23 @@
   </head>
   <body>
     <script>
-      function isPrime(num) {
-        if (num <= 1) {
-          return false;
-        }
-        for (let index = 2; index <= Math.sqrt(num); index++) {
-          if (num % index === 0) {
-            return false;
-          }
-        }
-        return true;
-      }
-
-      function calculateSumPrimeNumber_For(startNum, endNum) {
+      function sumDivide_For(num) {
         let sum = 0;
-        for (let currentNum = startNum; currentNum <= endNum; currentNum++) {
-          if (isPrime(currentNum)) {
-            sum += currentNum;
+        for (let index = 1; index <= num; index++) {
+          if (num % index === 0) {
+            sum += index;
           }
         }
         return sum;
       }
-
-      function calculateSumPrimeNumber_While(startNum, endNum) {
+      function sumDivide_While(num) {
         let sum = 0;
-        let currentNum = startNum;
-        while (currentNum <= endNum) {
-          if (isPrime(currentNum)) {
-            sum += currentNum;
+        let index = 1;
+        while (index <= num) {
+          if (num % index === 0) {
+            sum += index;
           }
-          currentNum++;
+          index++;
         }
         return sum;
       }
