change boofstrap method to sweetarlert and fix register login

--- a/Bai_tap/web_ban_hang/Cart.html
+++ b/Bai_tap/web_ban_hang/Cart.html
@@ -50,13 +50,13 @@
               </div>
               <div class="col-xxl-2 col-5" style="padding: 0">
                 <div class="logo">
-                  <div class="">
+                  <a href="HomePage.html" class="">
                     <img
                       style="width: 98px"
                       src="https://levents.asia/template/assets/images/logo.png"
                       alt=""
                     />
-                  </div>
+                  </a>
                 </div>
               </div>
               <div class="col-xxl-2 col-1"></div>
@@ -180,7 +180,11 @@
           <div class="cart__con">
             <div class="wrap-mini-cart box-loading m-btn-loading">
               <div class="cart__list count-cart" data-count="1">
-                <div id="product-container" class="row" style="width: 100%;"></div>
+                <div
+                  id="product-container"
+                  class="row"
+                  style="width: 100%"
+                ></div>
               </div>
               <hr />
               <div class="cart__sub">
@@ -212,7 +216,7 @@
               <section class="sec-80 pd">
                 <div class="con">
                   <h2 class="sec-title">SẢN PHẨM NỔI BẬT CỦA LEVENTS®</h2>
-                  <div class="row" id="productRow" ></div>
+                  <div class="row" id="productRow"></div>
                   <a
                     href="https://levents.asia/shop/"
                     class="btn-sec hov-df pd__btn mg-ct"
