--- a/Bai_tap/web_ban_hang/HomePage.html
+++ b/Bai_tap/web_ban_hang/HomePage.html
@@ -49,13 +49,13 @@
               </div>
               <div class="col-xxl-2 col-5" style="padding: 0">
                 <div class="logo">
-                  <div class="">
+                  <a href="HomePage.html" class="">
                     <img
                       style="width: 98px"
                       src="https://levents.asia/template/assets/images/logo.png"
                       alt=""
                     />
-                  </div>
+                  </a>
                 </div>
               </div>
               <div class="col-xxl-2 col-1"></div>
@@ -236,9 +236,7 @@
         <section class="sec-80 sty">
           <div class="con">
             <h2 class="sec-title">BỘ PHỐI CỦA LEVENTS</h2>
-            <div class="row"id="itemContainer">
-            
-            </div>
+            <div class="row" id="itemContainer"></div>
           </div>
         </section>
 
