--- a/Bai_tap/web_ban_hang/Login.html
+++ b/Bai_tap/web_ban_hang/Login.html
@@ -54,13 +54,13 @@
               </div>
               <div class="col-xxl-2 col-5" style="padding: 0">
                 <div class="logo">
-                  <div class="">
+                  <a href="HomePage.html" class="">
                     <img
                       style="width: 98px"
                       src="https://levents.asia/template/assets/images/logo.png"
                       alt=""
                     />
-                  </div>
+                  </a>
                 </div>
               </div>
               <div class="col-xxl-2 col-1"></div>
@@ -185,12 +185,7 @@
               <div class="form">
                 <div class="form__txt">
                   Bạn chưa có tài khoản?
-                  <a
-                    href="https://levents.asia/my-account/register/"
-                    class="form__link"
-                  >
-                    Đăng ký
-                  </a>
+                  <a href="Register.html" class="form__link"> Đăng ký </a>
                 </div>
                 <input
                   type="text"
@@ -688,6 +683,8 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     ></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@10"></script>
+
     <script src="./js/index.js"></script>
     <script src="./js/login.js"></script>
     <link
