--- a/Bai_tap/web_ban_hang/ProductDetail.html
+++ b/Bai_tap/web_ban_hang/ProductDetail.html
@@ -56,13 +56,13 @@
               </div>
               <div class="col-xxl-2 col-5" style="padding: 0">
                 <div class="logo">
-                  <div class="">
+                  <a href="HomePage.html" class="">
                     <img
                       style="width: 98px"
                       src="https://levents.asia/template/assets/images/logo.png"
                       alt=""
                     />
-                  </div>
+                  </a>
                 </div>
               </div>
               <div class="col-xxl-2 col-1"></div>
@@ -390,7 +390,7 @@
                     <div class="amount fl-ct amoJS">
                       <div class="minus hov-df amoM"></div>
                       <input
-                      id="quantity"
+                        id="quantity"
                         type="number"
                         class="number rs-form amoVal"
                         name="quantity"
