--- a/Bai_tap/web_ban_hang/Register.html
+++ b/Bai_tap/web_ban_hang/Register.html
@@ -105,13 +105,13 @@
                       </div>
                     </a>
                   </div>
-                  <div class="login">
-                    <a class="" data-act="user" href="Login.html">
+                  <div class="login" id="logOut">
+                    <div class="" data-act="user">
                       <img
                         src="https://levents.asia/template/assets/images/svg/ic-user.svg"
                         alt=""
                       />
-                    </a>
+                    </div>
                   </div>
                   <div class="collapse navbar-collapse">
                     <div class="" data-act="lang">
